# Jarvis

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  start-jarvis-desktop.bat  start-ultron-desktop.bat  start.bat
config/: agents.yaml  config.template.yaml
docs/: API_KEYS_GUIDE.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  GEMINI_ARCHITECTURE.md  PERSONAPLEX_SETUP.md  PROJECT_TREE.md  PROMPT.txt  README.md  TECH_STACK.md  USAGE.md  providers.md  update-summary.md  verdent-ai-analysis.md  workspace-system-guide.md  workspace.md
jarvis/: __init__.py  cli.py  coding.py  config.py  gui_app.py  llm.py  memory.py  research.py  tts_voice.py  voice_pipeline.py
jarvis-desktop/: index.html  package-lock.json  package.json  tailwind.config.js
jarvis-desktop/src/: App.tsx  index.css  main.tsx
jarvis-desktop/src-tauri/: Cargo.toml  tauri.conf.json
jarvis-desktop/src/components/: ChatArea.tsx  InputBox.tsx  Sidebar.tsx  StatusBadge.tsx  StreamingMessage.tsx  VoiceControl.tsx  WorkspacePanel.tsx
jarvis-desktop/src/hooks/: useJarvis.ts
jarvis/actions/: __init__.py  code_helper.py  computer_settings.py  open_app.py  weather_report.py  web_search.py
jarvis/api/: __init__.py  main.py  ws_manager.py
jarvis/api/routes/: agents.py  chat.py  status.py
jarvis/v2/: __init__.py  bootstrap.py
jarvis/v2/agents/: __init__.py  base.py  calendar_agent.py  clipboard_agent.py  coder.py  email_agent.py  (+6 more)
scripts/: ai_bridge_monitor.py  audit_v2.py  jarvis_auto_patcher.py  jarvis_setup.py  setup_personaplex.py  test_airllm_405b.py  test_audio.py  ultron_auto_patcher.py  ultron_setup.py
tests/: conftest.py  test_agents.py  test_api.py  test_memory.py
ultron/: __init__.py  cli.py  coding.py  config.py  gui_app.py  llm.py  memory.py  research.py  voice_pipeline.py
ultron-desktop/: index.html  package-lock.json  package.json  tailwind.config.js
ultron-desktop/src/: App.tsx  index.css
ultron-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ultron/actions/: __init__.py  ask_architect.py  code_helper.py  computer_settings.py  open_app.py  weather_report.py  web_search.py
ultron/api/: __init__.py  main.py  models.py
ultron/v2/: __init__.py  bootstrap.py
(+81 files in other folders)
